Bug 143353 - [GTK3] Tip of the Day dialogue is focused but does not respond to clicks until Template dialogue is closed
Summary: [GTK3] Tip of the Day dialogue is focused but does not respond to clicks unti...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.2.0.1 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: regression
: 138655 143841 144278 (view as bug list)
Depends on:
Blocks: GTK3 Tip-Of-The-Day
  Show dependency treegraph
 
Reported: 2021-07-14 11:58 UTC by stragu
Modified: 2021-09-03 11:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2021-07-14 11:58:12 UTC
Description:
 When starting Impress, both the "Tip of the Day" and "Select a Template" dialogues open. Even when Tip of the Day is at the front and focused, it does not respond to clicks until the Template dialogue behind it is closed.

Steps to Reproduce:
1. Open Impress
2. See that both dialogues are open
3. Click on Tip of the Day buttons

Actual Results:
Nothing happens.

Expected Results:
The dialogue responds, even if the Template dialogue is still open.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
This seems to be a regression in the 7.2 branch as it works as expected in 7.0.6.2 and 7.1.4.2

Issue seen in:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 4146be28450c77159ae8c7f8d4d7f471756ec14c
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-07-10_02:16:38
Calc: threaded

Version: 7.2.0.1 / LibreOffice Community
Build ID: 32efc3b7f3a71cfa6a7fa3f6c208333df48656cc
CPU threads: 8; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Buovjaga 2021-07-19 09:23:25 UTC
Works fine for me, but I can't test with other backends besides gen. You could try with gen, though.

NixOS
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: b1df9c67349cf4cc5be4128d797aefb87f50e38f
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: x11
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 2 stragu 2021-07-19 11:46:52 UTC
Thanks, Buovjaga. I just tested with gen and it does seem it is a GTK-only issue.
Comment 3 BogdanB 2021-07-19 12:55:00 UTC Comment hidden (obsolete)
Comment 4 BogdanB 2021-07-19 15:05:22 UTC
Confirm with
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: c6695a4aabeaae99174b7658f2b813788ecff7f0
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Exactly as it was described.
Comment 5 BogdanB 2021-07-19 15:07:34 UTC
Confirm also with
Version: 7.2.0.1.0+ / LibreOffice Community
Build ID: 5570795d54a00041a406243b777f0df5f6399b67
CPU threads: 4; OS: Linux 5.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:libreoffice-7-2, Time: 2021-07-15_19:14:35
Calc: threaded
Comment 6 Buovjaga 2021-08-03 15:57:32 UTC
I tried bibisecting, but for some reason I can't reliably force tip of the day to display using Safe mode.
Comment 7 BogdanB 2021-08-14 14:21:51 UTC
*** Bug 143841 has been marked as a duplicate of this bug. ***
Comment 8 Caolán McNamara 2021-08-18 10:27:23 UTC
I imagine this is happening since

commit 7f032b2f16fad56beea1df826eb59c6f85c71268
Date:   Sat Apr 3 01:24:30 2021 -0500

  tdf#127533 Make Tip-of-the-Day dialog non-modal and allow multiple tips to open
    
  The Tip-of-the-Day dialog is made non-modal and stays on-top of the main window while allowing the user to interact with the rest of application.
Comment 9 Caolán McNamara 2021-08-18 11:16:36 UTC
The tip of the day is launched after the template dialog. The template dialog is modal so from gtk's perspective nothing else can be interacted with (even though the tip-of-the-day in modeless) but as the tip dialog is launched second it appears on top by default. Throwing multiple dialogs at the user on startup isn't really great.
Comment 10 Caolán McNamara 2021-08-18 14:29:43 UTC
lets try and not launch the tip of the date while the template dialog is open
Comment 11 Commit Notification 2021-08-18 19:23:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f42157e2457e30a7f18fdf9d7bb5bddfb819f04

tdf#143353 defer tip of the day until impress template dialog is gone

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Caolán McNamara 2021-08-18 19:33:15 UTC
serialize their appearance so the problem doesn't arise at impress launch, done in trunk, backport to 7-2 in gerrit
Comment 13 Commit Notification 2021-08-19 12:53:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/eb9898da5e553bea997238dd988fa281aaf21b90

tdf#143353 defer tip of the day until impress template dialog is gone

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Eleonora Govallo 2021-08-19 22:49:05 UTC
Hello!
I checked the master version and the bug is dismissed. Thank you!
Comment 15 stragu 2021-08-20 14:01:49 UTC
Thanks Caolán! Also verified as fixed with:

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: da006fbe2d4c5891933390d72f6e6026b28d39fc
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2021-08-19_11:31:56
Calc: threaded
Comment 16 Caolán McNamara 2021-09-03 09:47:17 UTC
*** Bug 138655 has been marked as a duplicate of this bug. ***
Comment 17 Caolán McNamara 2021-09-03 09:47:47 UTC
*** Bug 144278 has been marked as a duplicate of this bug. ***