tdf#143353 defer tip of the day until impress template dialog is gone

wait until that dialog is dismissed before showing the tip dialog

Change-Id: Id0e7e28f09c5a9727e10eda55e468adb56bfda70