include/sfx2/app.hxx
@@ -218,6 +218,12 @@ public:
     /** loads the application logo as used in the impress slideshow pause screen */
     static BitmapEx GetApplicationLogo(tools::Long nWidth);
 
+    /** if true then dialog/infobar notifications like the tip of the day or
+        version change infobar should be suppressed */
+    static bool IsHeadlessOrUITest();
+
+    static bool IsTipOfTheDayDue();
+
     /** this Theme contains Images so must be deleted before DeInitVCL */
     sfx2::sidebar::Theme & GetSidebarTheme();
 };
